Fixed image spacing

--- a/CSS/products.css
+++ b/CSS/products.css
@@ -165,6 +165,7 @@ h1 {
         width: 90vw;
         text-align: center;
         align-items: center;
+        min-height: 20vh;
     }
 
     .button-list {
